# webrtc_stu

./: .gitmodules
demo_01/client/: index.html  main.js  room.html
demo_01/server/: server.js
example02/: reademe.txt  visor_local_video.html
example04/: reademe.txt  rtc_peer_connection_01.js
native_dev/demo_01/: CMakeLists.txt  CMakeSettings.json  env.cmake
native_dev/demo_01/client/: context.cpp  context.h  main.cpp  settings.cpp  settings.h  signals_client.cpp  signals_client.h  web_socket_client.cpp  web_socket_client.h
native_dev/demo_01/client/rtc/: rtc_manager.cpp  rtc_manager.h  test_video_capturer.cc
native_dev/demo_01/client/ui/: local_render_widget.cpp  local_render_widget.h  main_window.cpp  main_window.h  remote_render_widget.cpp  remote_render_widget.h
native_dev/demo_01/client/video-widget/: CMakeLists.txt  GLImageReader.cpp  GLImageReader.h  GLVideoShader.h  GLVideoWidget.cpp  GLVideoWidget.h  RawImage.cpp  RawImage.h  gl_video_widget_main.cpp
native_dev/demo_01/common/: common.cpp  common.h  yk_logger.cpp  yk_logger.h
native_dev/demo_01/public/: signals_def.h
native_dev/demo_01/server/: main.cpp  room_manager.cpp  room_manager.h  signals_server.cpp  signals_server.h  web_socket_server.cpp  web_socket_server.h
